<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.perk.assignment2_b.MainActivity"
    app:layout_constraintTop_toTopOf="@+id/textView"
    tools:layout_editor_absoluteX="0dp"
    android:layout_marginTop="8dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="192dp"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/Validate" />

    <Button
        android:id="@+id/Validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="buttonOnClick"
        android:text="Validate"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="203dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
